limpeza de repositório

--- a/Importacao Fig - Main.ipynb
+++ b/Importacao Fig - Main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 100,
    "id": "ddf73046",
    "metadata": {},
    "outputs": [
@@ -29,21 +29,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2020-11-03', '2020-11-04', '2020-11-05', '2020-11-06', '2020-11-09']\n",
-      "1\n"
+      "['2020-11-03', '2020-11-04', '2020-11-05', '2020-11-06', '2020-11-09', '2020-11-10', '2020-11-11', '2020-11-12', '2020-11-13', '2020-11-18', '2020-11-19', '2020-11-20', '2020-11-21', '2020-11-23', '2020-11-24', '2020-11-25', '2020-11-26', '2020-11-27', '2020-11-30']\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'add_run'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-9fde494a9ed3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[1;31m# 3. adicionar imagens em cada parágrafo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfoto\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mFigPath\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 92\u001b[1;33m     \u001b[0madcionar_figura\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparagrafo\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfoto\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdatas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     93\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-21-9fde494a9ed3>\u001b[0m in \u001b[0;36madcionar_figura\u001b[1;34m(paragrafo, foto, datas)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mparagrafo\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdatas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfotodata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_run\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_picture\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfoto\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mCm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6.0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mCm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6.0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[0mparagrafo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_run\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mparagrafo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'add_run'"
-     ]
+     "data": {
+      "text/plain": [
+       "[<docx.text.paragraph.Paragraph at 0x21654bd3700>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf05b0>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0b50>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0880>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf01f0>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0ca0>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0c10>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654a79fd0>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf09a0>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0c70>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0b80>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0f40>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0e50>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0f70>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0580>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0d90>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21654bf0160>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21655227070>,\n",
+       " <docx.text.paragraph.Paragraph at 0x21655227c70>]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -60,7 +74,7 @@
     "    fotodata=foto[ind1:ind2]\n",
     "    \n",
     "    paragrafo[datas.index(fotodata)].add_run().add_picture(foto, width=Cm(6.0), height=Cm(6.0))\n",
-    "    paragrafo.add_run(' ')\n",
+    "    paragrafo[datas.index(fotodata)].add_run(' ')\n",
     "    return paragrafo\n",
     "\n",
     "#cria uma lista com todos os caminhos de arquivos do diretório da figura inicial\n",
@@ -70,6 +84,8 @@
     "    for root, dirs, files in os.walk(d):#varre todos os arquivos\n",
     "            lista.extend(files) #no diretório é acresentado o nome do arquivo\n",
     "    return lista\n",
+    "\n",
+    "   \n",
     "            \n",
     "        \n",
     "\n",
@@ -82,7 +98,7 @@
     "\n",
     "#caminho de foto qualquer do diretório cuja demais fotos serão importadas\n",
     "# 'r' no prefixo do cainho para conter erros de raw string vs regular string\n",
-    "Fig1 = r\"C:\\Users\\eder\\Documents\\DevProjetos\\Importacao-Word\\Figuras Exemplos\\WhatsApp Image 2020-11-03 at 07.43.40.jpeg\"\n",
+    "Fig1 = r\"C:\\RioUna\\Memorial Fotográfico Vila do Aeroporto\\2020\\11.novembro-2020\\WhatsApp Image 2020-11-03 at 07.43.40.jpeg\"\n",
     "\n",
     "dir1 = os.path.dirname(Fig1)#nome da pasta onde estão as figuras\n",
     "\n",
@@ -124,8 +140,17 @@
     "# 1. Filtrar as as datas para colocar no mesmo titulo\n",
     "\n",
     "datas\n",
-    "temp = pd.Timestamp(datas[0])\n",
-    "print(temp.dayofweek)\n",
+    "DiaDaSemana={\n",
+    "    0:'segunda-feira',\n",
+    "    1:'terça-feira',\n",
+    "    2:'quarta-feira',\n",
+    "    3:'quinta-feira',\n",
+    "    4:'sexta-feira',\n",
+    "    5:'sábado',\n",
+    "    6:'domingo',\n",
+    "    \n",
+    "}\n",
+    "\n",
     "\n",
     "## criação dos parágrafos\n",
     "paragrafo=[None]*len(datas)\n",
@@ -133,7 +158,7 @@
     "# 2. definição dos paragrafos\n",
     "\n",
     "for dia in datas:\n",
-    "    document.add_heading(dia, level=1)\n",
+    "    document.add_heading(dia+' '+DiaDaSemana[pd.Timestamp(dia).weekday()], level=1)\n",
     "    paragrafo[datas.index(dia)]=document.add_paragraph(' ')\n",
     "    \n",
     "# 3. adicionar imagens em cada parágrafo\n",
@@ -143,103 +168,76 @@
     "    \n",
     "## exportação ok DE PARÁGRAFO OK!!! \n",
     "display(paragrafo)\n",
-    "document.save(\"teste-export7.docx\")\n"
+    "document.save(dir1+\"\\\\\"+\"11.novembro2020.docx\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "98844368",
+   "execution_count": 99,
+   "id": "02ef31f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-03 at 07.43.40.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-03 at 10.34.06.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-03 at 10.36.57.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-03 at 11.21.39.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-04 at 08.30.36.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-04 at 08.30.37.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-04 at 09.35.25.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-05 at 16.14.36.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-06 at 09.59.44.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-06 at 10.00.21.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-06 at 10.01.15.jpeg',\n",
-       " 'C:\\\\Users\\\\eder\\\\Documents\\\\DevProjetos\\\\Importacao-Word\\\\Figuras Exemplos\\\\WhatsApp Image 2020-11-09 at 11.42.19.jpeg']"
+       "Timestamp('2021-07-12 00:00:00')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(FigPath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "09b4dd39",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "3"
+       "datetime.datetime(2021, 7, 14, 9, 52, 40, 219952)"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "document.add_heading('dia 01', level=1)#adiciona o primeito título para melhor navegação no word\n",
-    "\n",
-    "p1 = document.add_paragraph(' 1.2 ') #cria o parágrafo escrito \n",
-    "\n",
-    "p1=adcionar_figura(p1, FigPath[0]) #adiciona a figura logo após os parágrafos acimas já criados\n",
-    "\n",
-    "\n",
-    "#adiciona por ordem de comando, entretanto no paragrafo da variável, independe da posição do comando\n",
-    "p2 = document.add_paragraph(' 2.1 ')\n",
-    "p2.add_run(' 2.2 ')\n",
-    "p2.add_run().add_picture(FigPath[2], width=Cm(6.0), height=Cm(6.0))\n",
-    "p2.add_run(' 2.3º ')\n",
-    "\n",
-    "\n",
-    "\n",
-    "p[0].add_run().add_picture(FigPath[3], width=Cm(6.0), height=Cm(6.0))\n",
-    "p[1].add_run().add_picture(FigPath[3], width=Cm(6.0), height=Cm(6.0))\n",
-    "\n",
-    "## exportação do arquivo em docx\n",
-    "\n",
-    "document.save(dir1+\"\\\\\"+\"teste-export5.docx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fb9dc4a9",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
-       "5"
+       "2"
       ]
      },
-     "execution_count": 3,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'sexta-feira'"
+      ]
+     },
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "len(datas)"
+    "\n",
+    "\n",
+    "temp = pd.Timestamp('2021-07-12')\n",
+    "\n",
+    "display(temp)\n",
+    "display(datetime.today())\n",
+    "display(datetime.today().weekday())\n",
+    "display(temp.weekday())\n",
+    "\n",
+    "pd.Timestamp('2021-07-12').weekday()\n",
+    "DiaDaSemana[pd.Timestamp(datas[3]).weekday()]\n"
    ]
   },
   {
